--- a/private/eve/play.html
+++ b/private/eve/play.html
@@ -117,7 +117,6 @@
       box-shadow: 0 8px 22px var(--accent-shadow);
     }
 
-    /* 更隐蔽：数据库按钮 */
     #switchDbBtn {
       position: absolute;
       top: 8px;
@@ -143,7 +142,6 @@
       opacity: 0.8;
     }
 
-    /* 数据库面板 */
     #dbPanel {
       position: absolute;
       top: 40px;
@@ -266,7 +264,6 @@
       gap: 6px;
     }
 
-    /* 新增组 Modal */
     #addModalMask,
     #viewModalMask {
       position: fixed;
@@ -338,7 +335,6 @@
       gap: 10px;
     }
 
-    /* 查看组 Modal 专用 */
     .questions-scroll {
       max-height: min(60vh, 520px);
       overflow: auto;
@@ -362,7 +358,6 @@
       border-bottom: none;
     }
 
-    /* 动画 */
     @keyframes spinBlur {
       0% {
         filter: blur(0);
@@ -412,7 +407,6 @@
   <header id="pageTitle">抽题</header>
 
   <div id="container">
-    <!-- 更隐蔽的按钮：低不透明度的小字按钮 -->
     <button id="switchDbBtn" title="题库">数据库</button>
 
     <div id="dbPanel" aria-hidden="true">
@@ -463,16 +457,14 @@
     </div>
   </div>
 
-  <!-- Firebase SDK（如使用本地模式，可将下面两行注释掉） -->
+  <!-- 数据源切换：通过注释/取消注释来切换 -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  <!-- <script> const USE_FIREBASE = true; </script> -->
+  <script> const USE_FIREBASE = false; </script>
 
   <script>
-    // ============ 模式切换 ============
-    // 将下行改为 false，或将上方两条 Firebase SDK <script> 注释掉，即可切换到本地模式（使用 localStorage）
-    const USE_FIREBASE = false;
-
-    // ============ Firebase 配置（云端模式） ============
+    // ============ Firebase 配置（如切到云端再用） ============
     const firebaseConfig = {
       apiKey: "AIzaSyAu6RnEXYMRsJP3Q8EISNyQRPtbGLDYwkk",
       authDomain: "truth-or-dare-b4b2a.firebaseapp.com",
@@ -484,12 +476,11 @@
       measurementId: "G-5TXR8Y8BSR"
     };
 
-    // ============ 数据层封装（自动适配本地/云端） ============
+    // ============ 数据层（本地 JSON / Firebase） ============
     const isFirebaseAvailable = typeof firebase !== 'undefined';
     const isFirebaseMode = USE_FIREBASE && isFirebaseAvailable;
 
-    // 本地数据结构示例（可修改）
-    const LOCAL_STORAGE_KEY = 'tod_local_db_v1';
+    // 默认内置数据（兜底）
     const defaultLocalDB = {
       truth: {
         classic: [
@@ -501,54 +492,6 @@
         soft: [
           "今天最想对我说的一句话？",
           "你心里的小确幸是什么？"
-        ],
-        love: [
-          "你最喜欢在什么情况下被我完全主导？",
-          "你有没有幻想过自己像一只小狗一样，被我调教和支配？",
-          "你愿意为我戴上项圈和牵引绳，让我牵着你走吗？",
-          "你最想被我用什么样的方式惩罚？",
-          "你觉得我在什么样的角色扮演中最能激起你的服从欲？",
-          "你有没有特别想被我绑住，然后做一些事情？",
-          "你愿意为我描述你对“疼痛与快乐”最狂野的幻想吗？",
-          "你希望我用什么样的语气、什么样的言语来命令你？",
-          "你有没有因为我某个强势的举动而感到特别兴奋？",
-          "你愿意为我讲述一个你最渴望被“控制”的亲密场景吗？",
-          "你希望我用手、鞭子还是其他道具来轻拍你的身体？",
-          "你有没有因为我某个霸道的眼神而感到全身发软？",
-          "你最想在什么样的情境下，对我完全地屈服？",
-          "你愿意为我描述一下，当你和我亲密时，你最喜欢我做什么？",
-          "你有没有一个隐藏的愿望，但觉得有点幼稚或者不切实际，所以一直没说出口？",
-          "你最想亲吻我身体的哪个地方？",
-          "你现在最想对我做什么？",
-          "我身上哪个特质最能激发你的欲望？",
-          "你最想在车里和我做的一件“坏事”是什么？",
-          "你最希望我此刻以何种方式抚摸你？",
-          "你现在最想听我对你说一句什么样的话？",
-          "你有没有偷偷幻想过我们在这个场景下能做些什么？",
-          "我此刻的哪个动作最能激发你的欲望？",
-          "你现在最想和我玩一个什么样的“情趣游戏”？",
-          "在这个私密的空间里，你最想探索我身体的哪个部位？",
-          "你有没有因为我此刻的某个眼神而感到心跳加速？",
-          "你最想和我一起实现的一个“情趣”小目标是什么？",
-          "你有没有一个此刻突然冒出的疯狂念头？",
-          "我此刻的哪个声音最让你感到兴奋？",
-          "你最想让我为你做一件什么样的浪漫或性感的事情？",
-          "你有没有特别想过我此刻穿什么样子，或者在什么场合下最吸引你？",
-          "你最喜欢什么时候，在什么地方亲吻我？",
-          "你最喜欢的亲密姿势是什么？",
-          "你有没有特别的癖好或者幻想，但又不好意思告诉我？",
-          "你最喜欢我身体的哪个部位，为什么？",
-          "你有没有幻想过我们之间的一些亲密场景？",
-          "如果我们可以尝试一种新的亲密方式，你最想尝试什么？",
-          "你最希望我以何种方式抚摸你？",
-          "你最想和我一起做的一件“坏事”是什么？",
-          "你最希望我们之间能有更多什么样的亲密互动？",
-          "你有没有偷偷幻想过我们一起做一些“不合时宜”的事情？",
-          "你觉得我们之间最能激发你欲望的场景是什么？",
-          "哪一部电影或者书，最能让你感到兴奋？",
-          "你最想和我一起实现的一个小目标是什么？",
-          "你觉得我身上哪一点最能让你感到兴奋？",
-          "你有没有因为我的某个小动作而感到特别性感？"
         ]
       },
       dare: {
@@ -556,150 +499,40 @@
           "用表情演一个 5 秒内心戏",
           "闭眼描述我现在的样子 10 秒",
           "让对方指定一个口头禅并坚持 3 分钟"
-        ],
-        love: [
-          "骑在对方的胸膛上，轻轻地打Ta的耳光，直到Ta求饶。",
-          "跪在对方面前，喊Ta“主人”并亲吻Ta的脚趾。",
-          "像投喂小狗一样，将零食喂给对方。",
-          "用嘴喂饮料，将饮料含在自己嘴里，然后吐到对方嘴里。",
-          "用手和嘴唇探索对方的身体，直到Ta发出声音。",
-          "把对方的双手绑起来，然后用你的手掌轻拍Ta的屁股。",
-          "让对方戴上眼罩，然后用冰块或羽毛等东西轻抚Ta的身体，让Ta猜是什么。",
-          "用你手中的丝巾或领带，蒙上对方的眼睛，然后主导接下来的十分钟。",
-          "让对方躺在地上，你坐在Ta的腰上，然后用你的腿夹住Ta的脖子。",
-          "让对方跪在地上，你坐在Ta的背上，然后用你的脚轻轻踢Ta的屁股。",
-          "骑在对方的脖子上，让Ta像马一样带着你走一圈。",
-          "坐在对方的脸上，用你的身体去摩擦Ta的脸。",
-          "用你的身体去摩擦对方的身体，直到Ta发出声音。",
-          "蒙上我的眼睛，然后用你的手和嘴唇探索我的脸。",
-          "在我的大腿上，用你的双腿夹住我，直到我求饶为止。",
-          "用你的嘴唇在我的身体上留下一个吻痕。",
-          "在不碰触我的情况下，用眼神和我玩一场“情趣游戏”。",
-          "给我一个“爱的拥抱”，持续一分钟。",
-          "告诉我你最喜欢我的什么，用你的身体语言表达出来。",
-          "在我的手心上用手指写出你最爱我的一点。",
-          "亲吻对方的脖子，并用嘴唇留下一个印记。",
-          "用舌头探索对方的耳垂，并轻咬一下。",
-          "亲吻对方的胸膛，直到Ta感到心跳加速。",
-          "用双手抚摸对方的背部，直到Ta感到全身放松。",
-          "吻对方的额头，并说出你爱Ta的原因。",
-          "用嘴唇沿着对方的手臂一路向上，直到肩膀。",
-          "亲吻对方的脚，并赞美Ta的优点。",
-          "朝对方的耳朵轻轻哈气，并说一句情话。",
-          "亲吻对方的屁股，并用手轻拍一下。",
-          "用你的鼻子摩擦对方的脸颊，直到Ta感到心痒。",
-          "亲吻对方的大腿根部，并用手指轻抚。",
-          "用你的双腿夹住对方的脖子，直到Ta求饶。",
-          "用你的身体，在对方身上写下你爱Ta的一句话。",
-          "用你的声音，在Ta耳边轻声说一些让你兴奋的话。",
-          "在Ta的嘴唇上轻轻咬一下，并说出你对Ta的欲望。",
-          "用手指在Ta的锁骨上写下你爱Ta的名字。",
-          "用你的膝盖，轻轻顶住对方的大腿内侧。",
-          "亲吻对方的腹部，并用手指在Ta身上画圈。",
-          "用你的脚趾，轻轻抚摸Ta的脚底。",
-          "在Ta的背上，用嘴唇画一个心形。",
-          "打一下对方的屁股，并用言语挑逗Ta。",
-          "打一下对方的脸，但必须是轻柔的。",
-          "假装我们是陌生人，在房间里重新认识对方。",
-          "拿出手机，互相在对方的手机上，为自己设置一个“爱称”。",
-          "用手或脚在对方的身上画画，让Ta猜是什么。",
-          "互相为对方做一次“爱的按摩”，从头到脚。",
-          "用手或脚在对方的身上画画，让Ta猜是什么。",
-          "互相为对方做一次“爱的按摩”，从头到脚。",
-          "假装我们是陌生人，在房间里重新认识对方。",
-          "拿出手机，互相在对方的手机上，为自己设置一个“爱称”。"
-        ],
-        sex_slave: [
-          "跪下，从我的双腿之间慢慢爬过，不许抬头",
-          "从前面钻到我的胯下停住，抬头接住我赏赐的口水",
-          "从我后面腿间钻过去，再趴下亲吻我的脚背",
-          "从我身后钻进双腿之间，驮我到休息处",
-          "钻过我的胯下时，脸贴着我的腿内侧不许低头",
-          "从我腿间钻过三次，每次都亲吻我的脚",
-          "从我腿间钻过时抬头看我一眼",
-          "钻到我腿间，双手抱住我的腿不松开，大声喊妈妈",
-          "钻到我腿间，舔干净我指定的地方",
-          "趴好，让我跨在你头上走过去",
-          "挺身抬头让我跨在你头上跨过去",
-
-          "用舌尖细细清理我后面的沟壑",
-          "用舌头沿着我后方的褶皱舔到前面的森林",
-          "用舌尖描绘我前方花园的轮廓",
-          "用舌尖在我腿根处画爱心",
-          "用舌尖在我菊花处画爱心",
-          "用舌尖在我指定的身体三处位置画爱心",
-          "用舌尖慢慢探入我后方的入口",
-          "用舌尖沿着我前方的缝隙缓缓舔到肚脐不许中断",
-          "用舌尖轻轻挑开我后方的缝隙",
-          "用舌尖舔干我脚趾缝的每一寸",
-          "趴在地上，从我脚背舔到脚底，好好侍奉",
-          "用舌尖舔过我脚底最敏感的地方，取悦我，直到我叫出声或者满意",
-          "舔遍我的后花园每一寸，直到我推开你",
-
-          "把你的脸贴进我前方最柔软的花心，好好服侍",
-          "跪在我面前，仰头接住我的圣水，好好感谢我的赏赐",
-          "跪着接住我亲口赏赐的饮料，并感恩地吞下",
-          "感恩地吞下我赐下的浓痰，不许皱眉",
-          "接住我吐在你脸上的唾液，眼睛必须睁着，感受我的恩赐",
-          "跪着接住我咀嚼过的食物，感恩地吞下",
-          "帮我褪下内裤，不许用手",
-          "帮我褪下袜子，不许用手",
-          "像狗一样叼着我的内裤，等待我的命令",
-          "像狗一样叼着我的袜子，在我面前自慰30S",
-          "吃掉我脚踩碎的食物并感谢我的施舍",
-          "取出我塞进任意部位的零食，不许用手",
-
-          "跪下，在我双腿间深呼吸三次，描述味道",
-          "把鼻子埋进我的森林深吸三次，感受气息",
-
-          "双手被绑住，等待我摆布",
-          "蒙着眼让我随意调教，直到我说停",
-          "被捆在桌腿上，任我摆布到满意为止",
-          "戴着项圈被我牵到角落跪好",
-          "蒙眼让我喂食或舔身体部位，猜错任意惩罚",
-
-          "被我骑脸直到窒息求饶",
-          "被我坐脸直到窒息求饶",
-          "让我贴在你面前自慰三十秒，不许眨眼，然后帮我清洁手指和按摩的部位",
-          "让我骑在身上抽耳光，每一下都要道谢",
-          "让主人骑在身上，带着主人走一圈。",
-          "让我用脚掌抽耳光",
-          "被我用脚趾摩擦你的唇，不许伸舌头",
-          "很简单，给我磕三个头",
-
-          "趴在我脚边舔去不小心滴上去的酸奶",
-          "用口水舔湿我下面所有的毛发，如果有脱落必须让主人掐着脖子塞进喉咙咽下去",
-
-          "被主人惩罚掐着脖子抽耳光",
-          "被主人惩罚按着脸在身后摩擦",
-          "被主人惩罚按着脸在身下摩擦",
-          "被主人奖励用手按摩私处30s，但是不许出声和高潮，否则收到惩罚",
-          "被主人奖励用丝袜按摩私处30s，但是不许出声和高潮，否则收到惩罚",
-
-          "用主人指定玩具帮主人按摩到湿润，然后用嘴清洁干净",
-          "用黄瓜(可替代)帮主人按摩到湿润，然后咬一口吃下去",
-          "用手指帮主人按摩到湿润，然后舔干净",
-          "用嘴唇帮主人按摩到湿润，然后舔干净",
-          "用舌尖帮主人按摩到湿润，然后舔干净",
-          "被主人惩罚，狠狠打屁股"
         ]
       }
     };
+
     let localDB = null;
 
-    function loadLocalDB() {
+    // 读取本地 JSON，并合并默认数据补齐缺失（不覆盖已有组）
+    async function loadLocalDBFromFile() {
+      if (localDB) return localDB;
       try {
-        const raw = localStorage.getItem(LOCAL_STORAGE_KEY);
-        localDB = raw ? JSON.parse(raw) : JSON.parse(JSON.stringify(defaultLocalDB));
-      } catch {
-        localDB = JSON.parse(JSON.stringify(defaultLocalDB));
+        const res = await fetch('./truth_or_dare.json', { cache: 'no-cache' });
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        const json = await res.json();
+
+        // 你的 JSON 是分组对象结构：{ truth: { truth1: [...] }, dare: { ... } }
+        localDB = {
+          truth: (json && typeof json.truth === 'object' && !Array.isArray(json.truth)) ? json.truth : {},
+          dare: (json && typeof json.dare === 'object' && !Array.isArray(json.dare)) ? json.dare : {},
+        };
+
+        // 合并默认数据（缺组时补齐）
+        localDB.truth = { ...(defaultLocalDB.truth || {}), ...(localDB.truth || {}) };
+        localDB.dare = { ...(defaultLocalDB.dare || {}), ...(localDB.dare || {}) };
+      } catch (err) {
+        console.warn('读取 truth_or_dare.json 失败，使用内置默认题库', err);
+        localDB = {
+          truth: { ...defaultLocalDB.truth },
+          dare: { ...defaultLocalDB.dare }
+        };
       }
+      return localDB;
     }
-    function saveLocalDB() {
-      try { localStorage.setItem(LOCAL_STORAGE_KEY, JSON.stringify(localDB)); } catch { }
-    }
+
     function getByPath(obj, path) {
-      // path like "/truth", "/truth/classic"
       const parts = path.replace(/^\/+/, '').split('/').filter(Boolean);
       let cur = obj;
       for (const p of parts) {
@@ -729,13 +562,14 @@
       delete cur[parts[parts.length - 1]];
     }
 
-    // 统一 API
     async function dbGet(path) {
       if (isFirebaseMode) {
         const snap = await firebase.database().ref(path).once('value');
         return snap.val();
       } else {
-        if (!localDB) loadLocalDB();
+        await loadLocalDBFromFile();
+        if (path === '/truth') return localDB.truth;
+        if (path === '/dare') return localDB.dare;
         return getByPath(localDB, path);
       }
     }
@@ -743,27 +577,23 @@
       if (isFirebaseMode) {
         await firebase.database().ref(path).set(value);
       } else {
-        if (!localDB) loadLocalDB();
+        await loadLocalDBFromFile();
         setByPath(localDB, path, value);
-        saveLocalDB();
       }
     }
     async function dbRemove(path) {
       if (isFirebaseMode) {
         await firebase.database().ref(path).remove();
       } else {
-        if (!localDB) loadLocalDB();
+        await loadLocalDBFromFile();
         removeByPath(localDB, path);
-        saveLocalDB();
       }
     }
 
-    // 若启用 Firebase，则初始化
     if (isFirebaseMode) {
       firebase.initializeApp(firebaseConfig);
     } else {
-      // 本地模式：提前加载一次数据
-      loadLocalDB();
+      loadLocalDBFromFile(); // 预加载
     }
 
     // ============ 元素 ============
@@ -806,7 +636,6 @@
     function resetDeck() { deck = [...questions]; shuffle(deck); }
     function playFade(el) { el.classList.remove('fadeIn'); void el.offsetWidth; el.classList.add('fadeIn'); }
 
-    // URL 参数
     function getUrlParams() {
       const params = new URLSearchParams(window.location.search);
       if (params.has('mode')) mode = String(params.get('mode') || '').toLowerCase();
@@ -815,7 +644,6 @@
     }
     getUrlParams();
 
-    // 模式文案
     function getModeLabels() {
       if (mode === 'dare') {
         return {
@@ -837,7 +665,6 @@
       };
     }
 
-    // 应用主题与标题/文案
     function applyThemeAndTitle() {
       const body = document.body;
       const L = getModeLabels();
@@ -855,7 +682,6 @@
     }
     applyThemeAndTitle();
 
-    // 渲染数据库面板
     function renderDbList() {
       dbList.innerHTML = '';
       databases.forEach((name, idx) => {
@@ -887,18 +713,18 @@
       }
     }
 
-    // 加载组列表
+    // 组列表
     async function loadDatabases() {
       const L = getModeLabels();
       try {
-        const val = await dbGet(`/${mode}`);
-        if (!val) {
+        const groupsObj = await dbGet(`/${mode}`);
+        if (!groupsObj || typeof groupsObj !== 'object') {
           databases = [];
           questionDiv.textContent = '题库为空';
           drawBtn.disabled = true;
           return;
         }
-        databases = Object.keys(val);
+        databases = Object.keys(groupsObj);
         if (!databases.length) {
           questionDiv.textContent = '题库为空';
           drawBtn.disabled = true;
@@ -920,13 +746,21 @@
       }
     }
 
-    // 读取单个题组题目（对象/数组兼容）
+    // 读取单个题组
     async function loadGroupQuestions(groupName) {
       const val = await dbGet(`/${mode}/${groupName}`);
-      const list = val
-        ? Array.isArray(val) ? val : Object.values(val)
-        : [];
-      return list
+      let list = [];
+      if (Array.isArray(val)) {
+        list = val;
+      } else if (val && typeof val === 'object') {
+        list = Object.values(val);
+      }
+      // 本地模式兜底
+      if ((!list || !list.length) && !isFirebaseMode) {
+        const fallback = defaultLocalDB[mode]?.[groupName];
+        if (Array.isArray(fallback)) list = fallback;
+      }
+      return (list || [])
         .map(x => (typeof x === 'string' ? x.trim() : ''))
         .filter(Boolean);
     }
@@ -1000,14 +834,14 @@
           }
         }
         renderDbList();
-        alert('已删除');
+        alert(isFirebaseMode ? '已删除' : '已从内存中删除（刷新后不保留，需修改 truth_or_dare.json 持久化）');
       } catch (e) {
         console.error(e);
         alert('删除失败，请稍后再试');
       }
     }
 
-    // 解析题目输入（逗号或换行）
+    // 输入解析
     function parseQuestionsInput(raw) {
       if (!raw) return [];
       const parts = raw.replace(/，/g, ',').split(/[\n,]/);
@@ -1023,7 +857,7 @@
       await dbSet(`/${mode}/${name}`, items);
     }
 
-    // 查看组 Modal 控制
+    // 查看组 Modal
     function openViewModal(groupName, items) {
       viewModalTitle.textContent = `题组：${groupName}（共 ${items.length} 题）`;
       viewQuestionsList.innerHTML = '';
@@ -1038,16 +872,7 @@
     }
     function closeViewModal() { viewModalMask.classList.remove('open'); }
 
-    // 新增组 Modal 控制
-    function openAddModal() {
-      groupNameInput.value = '';
-      questionsInput.value = '';
-      addModalMask.classList.add('open');
-      setTimeout(() => groupNameInput.focus(), 0);
-    }
-    function closeAddModal() { addModalMask.classList.remove('open'); }
-
-    // 事件
+    // 事件绑定
     drawBtn.addEventListener('click', draw);
     switchDbBtn.addEventListener('click', () => toggleDbPanel());
     closePanelBtn.addEventListener('click', () => toggleDbPanel(false));
@@ -1058,18 +883,19 @@
       const nameEl = e.target.closest('.dbPanel-name');
 
       if (delBtn) {
+        e.stopPropagation();
         const name = delBtn.getAttribute('data-name');
         await deleteGroup(name);
         return;
       }
       if (viewBtn) {
+        e.stopPropagation(); // 修复：阻止冒泡，避免 document 点击监听立刻把弹窗关掉
         const name = viewBtn.getAttribute('data-name');
         try {
           const items = await loadGroupQuestions(name);
+          openViewModal(name, items);
           if (!items.length) {
-            alert('该题组暂无题目');
-          } else {
-            openViewModal(name, items);
+            setTimeout(() => alert('该题组暂无题目'), 0);
           }
         } catch (err) {
           console.error(err);
@@ -1078,6 +904,7 @@
         return;
       }
       if (nameEl) {
+        e.stopPropagation(); // 切换组时也避免误触全局关闭
         const name = nameEl.getAttribute('data-name');
         const idx = databases.indexOf(name);
         if (idx >= 0 && idx !== currentDbIndex) {
@@ -1090,24 +917,40 @@
     });
 
     document.addEventListener('click', (e) => {
+      // 关闭面板
       if (!dbPanel.contains(e.target) && e.target !== switchDbBtn) {
         toggleDbPanel(false);
       }
+      // 查看组弹窗：点击遮罩关闭，点击内容不关闭
       if (viewModalMask.classList.contains('open')) {
         const modal = viewModalMask.querySelector('.modal');
-        if (!modal.contains(e.target)) closeViewModal();
+        if (!modal.contains(e.target) && e.target !== modal) closeViewModal();
       }
+      // 新增组弹窗：点击遮罩关闭
       if (addModalMask.classList.contains('open')) {
         const modal = addModalMask.querySelector('.modal');
-        if (!modal.contains(e.target)) closeAddModal();
+        if (!modal.contains(e.target) && e.target !== modal) addModalMask.classList.remove('open');
       }
     });
 
-    addGroupBtn.addEventListener('click', () => openAddModal());
-    cancelAddBtn.addEventListener('click', () => closeAddModal());
-    closeViewBtn.addEventListener('click', () => closeViewModal());
+    addGroupBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      groupNameInput.value = '';
+      questionsInput.value = '';
+      addModalMask.classList.add('open');
+      setTimeout(() => groupNameInput.focus(), 0);
+    });
+    cancelAddBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      addModalMask.classList.remove('open');
+    });
+    closeViewBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      closeViewModal();
+    });
 
-    saveAddBtn.addEventListener('click', async () => {
+    saveAddBtn.addEventListener('click', async (e) => {
+      e.stopPropagation();
       const nameRaw = groupNameInput.value.trim();
       const name = nameRaw;
       const valid = /^[A-Za-z0-9_\-]+$/.test(name);
@@ -1124,11 +967,11 @@
         currentDbIndex = databases.indexOf(name);
         await loadQuestions();
         renderDbList();
-        closeAddModal();
+        addModalMask.classList.remove('open');
         toggleDbPanel(false);
-        alert('新增成功');
-      } catch (e) {
-        console.error(e);
+        alert(isFirebaseMode ? '新增成功' : '已添加到内存（刷新后不保留，需修改 truth_or_dare.json 持久化）');
+      } catch (e2) {
+        console.error(e2);
         alert('新增失败，请稍后再试');
       }
     });
@@ -1136,7 +979,7 @@
     document.addEventListener('keydown', (e) => {
       if (e.key === 'Escape') {
         if (viewModalMask.classList.contains('open')) closeViewModal();
-        else if (addModalMask.classList.contains('open')) closeAddModal();
+        else if (addModalMask.classList.contains('open')) addModalMask.classList.remove('open');
         else toggleDbPanel(false);
       }
     });
@@ -1147,4 +990,3 @@
 </body>
 
 </html>
-```
